Fix nav z-index

--- a/components/nav/nav.module.css
+++ b/components/nav/nav.module.css
@@ -3,6 +3,7 @@
   top: var(--header-height);
   bottom: 0;
   left: 0;
+  z-index: 10;
   display: none;
   flex-direction: column;
   gap: 12px;
